--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
-*.make linguist-generated
-*.cmake linguist-generated
-CMakeLists.txt linguist-generated
-diagram.png linguist-generated
+Makefile linguist-language-ignore
+*.mk linguist-language-ignore
+CMakeLists.txt linguist-language-ignore
