Trying to exclude Makefile from language statistics

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+Makefile linguist-vendored
 Makefile linguist-language-ignore
 *.mk linguist-language-ignore
 CMakeLists.txt linguist-language-ignore
