Fixed the microprogramLoop logic, improved code structure, added explanation about each signal in MIP struct and explained the current program

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@ CMakeLists.txt linguist-language-ignore
 # Ignore CMake build directories
 cmake-build-debug/* linguist-vendored
 cmake-build-release/* linguist-vendored
+archived/* linguist-vendored
