--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,6 @@ Makefile linguist-language-ignore
 CMakeLists.txt linguist-language-ignore
 
 # Ignore CMake build directories
-cmake-build-debug/* linguist-vendored
-cmake-build-release/* linguist-vendored
-archived/* linguist-vendored
+cmake-build-debug/** linguist-vendored
+cmake-build-release/** linguist-vendored
+archived/** linguist-vendored
